--- a/5_1.ipynb
+++ b/5_1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "gender independent of education level? A random sample of 395 people were\n",
+    "Is gender independent of education level? A random sample of 395 people were\n",
     "surveyed and each person was asked to report the highest education level they\n",
     "obtained. The data that resulted from the survey is summarized in the following table:<br>\n",
     "High School Bachelors Masters Ph.d. Total<br>\n",
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "We have, <br>\n",
-    "H<sub>0</sub>: Gender and Education are independent\n",
+    "H<sub>0</sub>: Gender and Education are independent <br>\n",
     "H<sub>1</sub>: Gender and Education are dependent\n",
     "\n",
     "The expected frequency under the null hypothesis is given by:\n",
